tests/verifier/fail/test4.ial
function void ffi_test() cdecl
{
    block entry
    {
        ffi (some_lib, some_ep);
    }

    block foo
    {
        leave;
    }
}
